# chess-dot-cpp

./: .gitignore  .gitmodules  LICENSE  README.md  changelog.md
src/: CMakeLists.txt  CMakeSettings.json
src/ChessDotCpp/: CMakeLists.txt  ChessDotCpp.cpp  EvalDisplay.h  Makefile  PerftExternal.cpp  PerftExternal.h  abdada.h  attacks.cpp  attacks.h  bench.h  bits.h  board.cpp  board.h  changelog.md  common.h  constants.h  datagen.h  debug.h  display.h  displayeval.h  displaysearch.h  error.h  evalbase.h  evalstate.h  evaluation.cpp  evaluation.h  evaluationClassical.cpp  evaluationClassical.h  evaluationClassical2.cpp  evaluationClassical2.h  evaluationNnue.cpp  evaluationNnue.h  evaluationNnue2.h  evaluationNnueBase.cpp  evaluationNnueBase.h  fen.cpp  fen.h  game.h  likeliness.h  magicMoveboardFixed.h  (+41 more)
